# stock-analyzer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  stock_comparison_20250828_072229.csv  stock_comparison_20250828_073012.csv  test_analysis_20250828_071403.csv  test_summary_20250828_071403.csv
.claude/: settings.json
.claude/commands/: analyze.md  commit-and-pr.md  ensure-quality.md  gemini-documentation.md  gemini-search.md  improve.md  index.md  initialize-project.md  safe-refactor.md  scan.md  task.md  troubleshoot.md  write-tests.md
.devcontainer/: devcontainer.json
.gemini/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  claude_code_collaboration.yml  feature_request.yml
.github/workflows/: ci.yml
.stock-analyzer/: config.toml
docs/: api_reference.md  examples.md  phase1_learning_notes.md  requirements.md  technical_documentation.md  user_guide.md
scripts/: update_project_name.py
src/project_name/utils/: logging_config.py
src/stock_analyzer/: __init__.py  types.py
src/stock_analyzer/analysis/: backtesting.py  features.py  indicators.py  portfolio.py  visualizer.py
src/stock_analyzer/cli/: main.py
src/stock_analyzer/config/: __init__.py  config_manager.py  presets.py
src/stock_analyzer/core/: __init__.py  example.py
src/stock_analyzer/data/: fetchers.py
src/stock_analyzer/ml/: __init__.py  basic_models.py  lightgbm_predictor.py
src/stock_analyzer/reports/: csv_exporter.py
src/stock_analyzer/utils/: __init__.py  helpers.py  logging_config.py
template/src/template_package/: __init__.py  types.py
template/src/template_package/core/: __init__.py  example.py
template/src/template_package/utils/: __init__.py  helpers.py  logging_config.py  profiling.py
template/tests/: conftest.py
template/tests/integration/: test_example.py
template/tests/property/: __init__.py  test_helpers_property.py
template/tests/unit/: test_example.py  test_helpers.py  test_logging.py
tests/: __init__.py
tests/integration/: __init__.py
tests/property/: __init__.py
tests/unit/: test_dummy.py
